new pics and changes

--- a/index.html
+++ b/index.html
@@ -92,32 +92,32 @@
                 elit. Magnam ipsum</p>
         </aside>
         <section class="all">
-            <div class="pic"><img src="images/logo1.jpg" alt="Op logo">
+            <div id="op" class="pic"><img src="images/logo1.jpg" alt="Op logo">
                 <h3>One Piece</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
             </div>
-            <div class="pic"><img src="images/logo2.jpg" alt="Bleach logo">
+            <div id="bl" class="pic"><img src="images/logo2.jpg" alt="Bleach logo">
                 <h3>Bleach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
             </div>
-            <div class="pic"><img src="images/logo3.jpg" alt="Naruto logo">
+            <div id="ns" class="pic"><img src="images/logo3.jpg" alt="Naruto logo">
                 <h3>Naruto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
             </div>
-            <div class="pic"><img src="images/logo4.jpg" alt="Db logo">
+            <div id="db" class="pic"><img src="images/logo4.jpg" alt="Db logo">
                 <h3>Dragon-ball</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
             </div>
-            <div class="pic"><img src="images/logo5.jpg" alt="HXH logo">
+            <div id="hxh" class="pic"><img src="images/logo5.jpg" alt="HXH logo">
                 <h3>HunterXHunter</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
             </div>
-            <div class="pic"><img src="images/logo6.jpg" alt="AOT logo">
+            <div id="aot" class="pic"><img src="images/logo6.jpg" alt="AOT logo">
                 <h3>AOT</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
                     type="button">read more</button>
