--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Gallery</title>
 </head>
-<body>
-    
+
+<body id="bo">
+    <div id="grid2">
+        <header id="hea">
+            <h2>Gallery</h2>
+        </header>
+        <nav id="navi">
+            <a href=""></a>
+            <a href=""></a>
+        </nav>
+        <article id="art">
+            <p class="box-6"></p>
+        </article>
+        <section id="sec">
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+        </section>
+        <footer id="foo">
+            <p>footer</p>
+        </footer>
+    </div>
 </body>
+
 </html>
