final changes in the video gallery

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>Animw-Watch</title>
 </head>
 
-<body>
+<body class="dy">
     <div class="grid">
-        <header>
+        <header class="der">
             <h1>Anime-Watch</h1>
         </header>
-        <nav>
+        <nav class="git">
             <div class="menu">
                 <ul>
                     <li class="top">Anime</li>
@@ -56,7 +56,7 @@
                 </ul>
             </div>
         </nav>
-        <article>
+        <article class="ic">
             <p class="box-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum voluptatem accusamus
                 exercitationem, quae veritatis ad dolorum nesciunt at vero obcaecati culpa sed, excepturi nulla est
                 incidunt. Autem molestias laboriosam saepe sit accusantium nihil qui illum aspernatur repellendus ipsam
@@ -81,7 +81,7 @@
                 distinctio tenetur accusamus. Est ab quibusdam, odio nisi sed recusandae debitis illo ducimus unde quos
                 perferendis nesciunt consequuntur repellendus? Lorem </p>
         </article>
-        <aside>
+        <aside class="ide">
             <p class="box-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eos itaque aliquam. Suscipit
                 eaque tempora officia vel aliquid provident quis, exercitationem temporibus quibusdam, odit iure
                 quisquam, voluptate nisi ratione porro. Lorem ipsum dolor sit amet.</p>
@@ -93,7 +93,7 @@
                 voluptatibus officiis quod explicabo praesentium! Lorem ipsum dolor sit amet, consectetur adipisicing
                 elit. Magnam ipsum</p>
         </aside>
-        <section class="all">
+        <section class="ti">
             <div id="op" class="pic"><img src="images/logo1.jpg" alt="Op logo">
                 <h3>One Piece</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, molestias.</p><button
@@ -125,7 +125,7 @@
                     type="button">read more</button>
             </div>
         </section>
-        <footer>
+        <footer class="ter">
             <p>
             <i class="fas fa-copyright"></i>
             <i class="fas fa-copyright"></i>
