--- a/index1.html
+++ b/index1.html
@@ -4,32 +4,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>Gallery</title>
 </head>
 
-<body id="bo">
-    <div id="grid2">
-        <header id="hea">
-            <h2>Gallery</h2>
+<body class="bo">
+    <div class="grid2">
+        <header class="hea">
+            <h2>A Video Gallery</h2>
         </header>
-        <nav id="navi">
-            <a href=""></a>
-            <a href=""></a>
+        <nav class="navi">
+            <a href="http://127.0.0.1:5500/index2.html">Next Page</a>
+            <a href="http://127.0.0.1:5500/index.html">Back To Home Page</a>
         </nav>
-        <article id="art">
-            <p class="box-6"></p>
+        <article class="art">
+            <p class="box-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime minus possimus perspiciatis
+                expedita explicabo, obcaecati asperiores modi, error harum corrupti, aut numquam minima iste
+                reprehenderit. Labore atque dolores facere quia ut, veniam provident vel laboriosam quo inventore, iusto
+                velit. Aliquam ab mollitia quibusdam tempore numquam. Quas veritatis architecto ipsum optio ipsa
+                cupiditate sapiente, hic quis est eligendi voluptatibus itaque iure ipsam reprehenderit voluptatum cum
+                veniam, illo voluptates velit modi facilis inventore dolor quidem? Aliquam repellendus impedit, dicta,
+                odio accusantium earum, amet harum quia rerum aspernatur provident! Dolorum neque aliquam, laudantium,
+                dignissimos eius dolorem itaque nulla animi deleniti officia provident. Inventore? Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Minus sequi eaque qui ipsa esse magni ullam animi quis sapiente
+                numquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat distinctio</p>
         </article>
-        <section id="sec">
-            <iframe src="" frameborder="0"></iframe>
-            <iframe src="" frameborder="0"></iframe>
-            <iframe src="" frameborder="0"></iframe>
-            <iframe src="" frameborder="0"></iframe>
-            <iframe src="" frameborder="0"></iframe>
-            <iframe src="" frameborder="0"></iframe>
+        <aside class="as">
+            <p class="box-7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi doloribus odio
+                iusto. Sit maxime eius iste quod ducimus modi, odit earum et iusto commodi quo laboriosam numquam nam
+                mollitia ad quaerat. Atque nostrum voluptatibus, obcaecati quaerat quasi fugit vel est perspiciatis
+                dolorem commodi architecto expedita qui et facere placeat?</p>
+        </aside>
+        <section class="sec">
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/PZPrLrNP6x8?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <h3 class="hl">One Piece</h3>
+            </div>
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/w1aUFt-Mvos?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <h3 class="hl">Bleach</h3>
+            </div>
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/x2yepfJKRy0?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <h3 class="hl">Naruto</h3>
+            </div>
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/Ue5A_5zJPUc?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <h3 class="hl">dragon-Ball</h3>
+            </div>
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/AIiQRHsntck?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <h3 class="hl">Hunterxhunter</h3>
+            </div>
+            <div>
+                <iframe class="vid" src="https://www.youtube.com/embed/pR3KdTbbBoM?autoplay=0&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <h3 class="hl">Attack On Titan</h3>
+            </div>
+
         </section>
-        <footer id="foo">
-            <p>footer</p>
+        <footer class="foo">
+            <p>
+                <i class="fas fa-hand-peace"></i>
+                Enjoy Watching
+                <i class="fas fa-hand-peace"></i>
+            </p>
         </footer>
     </div>
 </body>
