start the lest page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Yosef Sahalo">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <title>Animw-Watch</title>
 </head>
 
@@ -49,6 +49,7 @@
                 </ul>
                 <ul>
                     <li class="top">Gallery</li>
+                    <li class="under"><a href="http://127.0.0.1:5500/index1.html">All-Gallery</a></li>
                     <li class="under"><a href="#">Op-gallery</a></li>
                     <li class="under"><a href="#">Bleavh-gallery</a></li>
                     <li class="under"><a href="#">Naruto-gallery</a></li>
@@ -127,11 +128,12 @@
         </section>
         <footer class="ter">
             <p>
-            <i class="fas fa-copyright"></i>
-            <i class="fas fa-copyright"></i>
-            <i class="far fa-copyright"></i>
-            copyright fullstac developer:Yosef Sahalo 2020-2021</p>
-            
+                <i class="fas fa-copyright"></i>
+                <i class="fas fa-copyright"></i>
+                <i class="far fa-copyright"></i>
+                copyright fullstac developer:Yosef Sahalo 2020-2021
+            </p>
+
         </footer>
     </div>
 </body>
