--- a/index1.html
+++ b/index1.html
@@ -20,6 +20,7 @@
             <a href="http://127.0.0.1:5500/index.html">Back To Home Page</a>
         </nav>
         <article class="art">
+            <h4>lorem</h4>
             <p class="box-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime minus possimus perspiciatis
                 expedita explicabo, obcaecati asperiores modi, error harum corrupti, aut numquam minima iste
                 reprehenderit. Labore atque dolores facere quia ut, veniam provident vel laboriosam quo inventore, iusto
@@ -32,6 +33,7 @@
                 numquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat distinctio</p>
         </article>
         <aside class="as">
+            <h4>lorem</h4>
             <p class="box-7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi doloribus odio
                 iusto. Sit maxime eius iste quod ducimus modi, odit earum et iusto commodi quo laboriosam numquam nam
                 mollitia ad quaerat. Atque nostrum voluptatibus, obcaecati quaerat quasi fugit vel est perspiciatis
@@ -63,14 +65,14 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
-                <h3 class="hl">dragon-Ball</h3>
+                <h3 class="hl">Dragon-Ball</h3>
             </div>
             <div>
                 <iframe class="vid" src="https://www.youtube.com/embed/AIiQRHsntck?autoplay=0&mute=1" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
-                <h3 class="hl">Hunterxhunter</h3>
+                <h3 class="hl">HunterXHunter</h3>
             </div>
             <div>
                 <iframe class="vid" src="https://www.youtube.com/embed/pR3KdTbbBoM?autoplay=0&mute=1" frameborder="0"
