--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <title>Manga Page</title>
 </head>
-<body>
-    
+
+<body class="bot">
+    <div class="grid3">
+        <header class="head">
+            <h2>Manga</h2>
+        </header>
+        <nav class="ion">
+            <a href="http://127.0.0.1:5500/index.html">Back To Home Page</a>
+            <a href="http://127.0.0.1:5500/index1.html">Previous Page</a>
+        </nav>
+        <article class="le">
+            <h4>lorem</h4>
+            <p class="box-8">Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempore, neque quis a necessitatibus praesentium. Incidunt earum molestiae laudantium repellat cumque, quisquam neque expedita impedit consequuntur consectetur tenetur eum sit velit recusandae nemo, inventore cupiditate iure odit aperiam cum dignissimos Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum architecto doloribus quaerat nulla, ad Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, hic, facilis similique necessitatibus reprehenderit ab placeat quidem maiores ea facere fugiat iusto rem debitis, minima recusandae. Totam explicabo eaque reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing e veritatis. laborum sequi. Officia dolores labore possimus veritatis laudantium asperiores odit? ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum illum autem sequi nulla aperiam.</p>
+            <h4>lorem</h4>
+            <p class="box-9">Lorem Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rem, quibusdam dicta nemo doloremque labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto incidunt perspiciatis neque, tempore autem hic accusamus soluta illo, voluptatum molestias dolorem nemo dolore quisquam magnam nam minima enim quas in? sit amet, consectetur adipisicing elit. Soluta minima aliquam suscipit aliquid reiciendis, assumenda magnam fuga, temporibus ullam magni tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis soluta officia facere sint commodi quia numquam vero, officiis ut. Consequuntur nisi maxime dicta corrupti nam. ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis inventore sequi rerum, obcaecati maiores ex.</p>
+        </article>
+         <aside class="out">
+            <h4>lorem</h4>
+             <p class="box-10">Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa odit vel aliquid perspiciatis, cum exercitationem. dolor sit amet consectetur, adipisicing elit. Saepe, voluptate!</p>
+             <h4>lorem</h4>
+             <p class="box-11">Lorem ipsum dolor sit amet Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus aliquam asperiores unde, veniam laboriosam in. consectetur adipisicing elit. Cupiditate, dolore?</p>
+             <h4>lorem</h4>
+             <p class="box-12">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatem consequuntur id earum illum explicabo. adipisicing elit. Ipsa, mollitia?</p>
+         </aside>
+        <section class="on">
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+        </section>
+        <footer class="down">
+            <p>To receive updates from the site,fill in the following details: </p>
+            <form>
+                <label>
+                    name:
+                    <input type="text" name="name">
+                </label>
+                <label>
+                    email:
+                    <input type="email" name="email">
+                </label>
+                <label>
+                    your message:
+                    <textarea name="message"></textarea>
+                </label>
+                <button type="submit">send massage</button>
+                <button type="reset">reset</button>
+            </form>
+        </footer>
+    </div>
 </body>
+
 </html>
