change in page nimber 3

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </ul>
                 <ul>
                     <li class="top">Manga</li>
+                    <li class="under"><a href="http://127.0.0.1:5500/index2.html">All-manga</a></li>
                     <li class="under"><a href="#">Op-manga</a></li>
                     <li class="under"><a href="#">Bleach-manga</a></li>
                     <li class="under"><a href="#">Naruto-manga</a></li>
@@ -58,14 +59,16 @@
             </div>
         </nav>
         <article class="ic">
+            <h4>lorem</h4>
             <p class="box-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum voluptatem accusamus
                 exercitationem, quae veritatis ad dolorum nesciunt at vero obcaecati culpa sed, excepturi nulla est
                 incidunt. Autem molestias laboriosam saepe sit accusantium nihil qui illum aspernatur repellendus ipsam
-                enim tempora aut atque, explicabo animi beatae voluptate eligendi quis ut! Magni! Lorem ipsum dolor sit
+                enim tempora Lorem ipsum, dolor sit amet consectetur adipisicing elit. A tempore dolor sint aspernatur obcaecati possimus aut perferendis eum, provident repudiandae temporibus reprehenderit consequuntur nam facilis, alias nihil nobis doloremque modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, corrupti. aut atque, explicabo animi beatae voluptate eligendi quis ut! Magni! Lorem ipsum dolor sit
                 amet consectetur adipisicing elit. Facilis aliquam distinctio quidem dolorem cupiditate ab iure eveniet
                 accusamus? Excepturi ut nulla voluptas mollitia dolor, amet dolorum accusamus sed aut atque explicabo
                 pariatur reprehenderit facere unde libero laboriosam soluta vitae provident accusantium quisquam quod
                 molestiae? Consequuntur porro laudantium quas odit in. Lorem ipsum dolor sit amet.</p>
+            <h4>lorem</h4>
             <p class="box-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, incidunt. Optio dolor
                 ducimus, recusandae itaque voluptatibus voluptate nulla incidunt ratione neque! Nemo, modi enim. Dolorem
                 error perspiciatis magnam voluptatum consectetur? Lorem ipsum dolor sit amet consectetur adipisicing
@@ -83,12 +86,15 @@
                 perferendis nesciunt consequuntur repellendus? Lorem </p>
         </article>
         <aside class="ide">
+            <h4>lorem</h4>
             <p class="box-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eos itaque aliquam. Suscipit
                 eaque tempora officia vel aliquid provident quis, exercitationem temporibus quibusdam, odit iure
                 quisquam, voluptate nisi ratione porro. Lorem ipsum dolor sit amet.</p>
+            <h4>lorem</h4>
             <p class="box-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima voluptatibus commodi,
                 facilis optio, repellendus perspiciatis repellat aliquid, corrupti qui animi harum. Tempore quos quo
                 unde molestias quisquam saepe velit voluptatibus? Lorem ipsum dolor sit amet.</p>
+            <h4>lorem</h4>
             <p class="box-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem perspiciatis aspernatur
                 laboriosam saepe, voluptas aliquam ducimus provident mollitia amet, repellendus hic temporibus
                 voluptatibus officiis quod explicabo praesentium! Lorem ipsum dolor sit amet, consectetur adipisicing
