--- a/index2.html
+++ b/index2.html
@@ -20,25 +20,71 @@
         </nav>
         <article class="le">
             <h4>lorem</h4>
-            <p class="box-8">Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempore, neque quis a necessitatibus praesentium. Incidunt earum molestiae laudantium repellat cumque, quisquam neque expedita impedit consequuntur consectetur tenetur eum sit velit recusandae nemo, inventore cupiditate iure odit aperiam cum dignissimos Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum architecto doloribus quaerat nulla, ad Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, hic, facilis similique necessitatibus reprehenderit ab placeat quidem maiores ea facere fugiat iusto rem debitis, minima recusandae. Totam explicabo eaque reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing e veritatis. laborum sequi. Officia dolores labore possimus veritatis laudantium asperiores odit? ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum illum autem sequi nulla aperiam.</p>
+            <p class="box-8">Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempore, neque
+                quis a necessitatibus praesentium. Incidunt earum molestiae laudantium repellat cumque, quisquam neque
+                expedita impedit consequuntur consectetur tenetur eum sit velit recusandae nemo, inventore cupiditate
+                iure odit aperiam cum dignissimos Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum
+                architecto doloribus quaerat nulla, ad Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Architecto, hic, facilis similique necessitatibus reprehenderit ab placeat quidem maiores ea facere
+                fugiat iusto rem debitis, minima recusandae. Totam explicabo eaque reprehenderit. Lorem ipsum dolor sit
+                amet consectetur adipisicing e veritatis. laborum sequi. Officia dolores labore possimus veritatis
+                laudantium asperiores odit? ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum illum
+                autem sequi nulla aperiam.</p>
             <h4>lorem</h4>
-            <p class="box-9">Lorem Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rem, quibusdam dicta nemo doloremque labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto incidunt perspiciatis neque, tempore autem hic accusamus soluta illo, voluptatum molestias dolorem nemo dolore quisquam magnam nam minima enim quas in? sit amet, consectetur adipisicing elit. Soluta minima aliquam suscipit aliquid reiciendis, assumenda magnam fuga, temporibus ullam magni tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis soluta officia facere sint commodi quia numquam vero, officiis ut. Consequuntur nisi maxime dicta corrupti nam. ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis inventore sequi rerum, obcaecati maiores ex.</p>
+            <p class="box-9">Lorem Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos rem, quibusdam dicta nemo doloremque labore. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Iusto incidunt perspiciatis neque, tempore autem hic accusamus soluta illo, voluptatum
+                molestias dolorem nemo dolore quisquam magnam nam minima enim quas in? sit amet, consectetur adipisicing
+                elit. Soluta minima aliquam suscipit aliquid reiciendis, assumenda magnam fuga, temporibus ullam magni
+                tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis
+                soluta officia facere sint commodi quia numquam vero, officiis ut. Consequuntur nisi maxime dicta
+                corrupti nam. ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis inventore sequi rerum,
+                obcaecati maiores ex.</p>
         </article>
-         <aside class="out">
+        <aside class="out">
             <h4>lorem</h4>
-             <p class="box-10">Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa odit vel aliquid perspiciatis, cum exercitationem. dolor sit amet consectetur, adipisicing elit. Saepe, voluptate!</p>
-             <h4>lorem</h4>
-             <p class="box-11">Lorem ipsum dolor sit amet Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus aliquam asperiores unde, veniam laboriosam in. consectetur adipisicing elit. Cupiditate, dolore?</p>
-             <h4>lorem</h4>
-             <p class="box-12">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatem consequuntur id earum illum explicabo. adipisicing elit. Ipsa, mollitia?</p>
-         </aside>
+            <p class="box-10">Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa odit vel
+                aliquid perspiciatis, cum exercitationem. dolor sit amet consectetur, adipisicing elit. Saepe,
+                voluptate!</p>
+            <h4>lorem</h4>
+            <p class="box-11">Lorem ipsum dolor sit amet Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus aliquam asperiores unde, veniam laboriosam in. consectetur adipisicing elit. Cupiditate,
+                dolore?</p>
+            <h4>lorem</h4>
+            <p class="box-12">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Harum voluptatem consequuntur id earum illum explicabo. adipisicing elit. Ipsa, mollitia?</p>
+        </aside>
         <section class="on">
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="mang"><img src="" alt=""><h2>lorem</h2><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="mang"><img src="images/op-manga.jpg" alt="op-manga"><a href="#">
+                    <h2>One-piece</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="mang"><img src="images/b-manga.jpg" alt="bleach-manga"><a href="#">
+                    <h2>Bleach</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="mang"><img src="images/ns-manga.jpg" alt="ns-manga"><a href="#">
+                    <h2>Naruto</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="mang"><img src="images/db-manga.jpg" alt="db-manga"><a href="#">
+                    <h2>Dragon-Ball</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="mang"><img src="images/hxh-manga.jpg" alt="hxh-manga"><a href="#">
+                    <h2>HunterXHunter</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="mang"><img src="images/aot-manga.jpg" alt="aot-manga"><a href="#">
+                    <h2>Attack-On-Titan</h2>
+                </a>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
         </section>
         <footer class="down">
             <p>To receive updates from the site,fill in the following details: </p>
