--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
                 tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis
                 soluta officia facere sint commodi quia numquam vero, officiis ut. Consequuntur nisi maxime dicta
                 corrupti nam. ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis inventore sequi rerum,
-                obcaecati maiores ex.</p>
+                obcaecati Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore magnam tempore quaerat soluta accusantium sapiente, reprehenderit nemo ipsam, aliquam ducimus consequatur, pariatur beatae aut quod. maiores ex.</p>
         </article>
         <aside class="out">
             <h4>lorem</h4>
