change in the forms

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <nav class="git">
             <div class="menu">
                 <ul>
+                    <li>
+                        <i class="fas fa-search"></i>
+                        <input type="search" name="search">
+                    </li>
+                </ul>
+                <ul>
                     <li class="top">Anime</li>
                     <li class="under"><a href="#">one piece</a></li>
                     <li class="under"><a href="#">bleach</a></li>
@@ -63,7 +69,11 @@
             <p class="box-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum voluptatem accusamus
                 exercitationem, quae veritatis ad dolorum nesciunt at vero obcaecati culpa sed, excepturi nulla est
                 incidunt. Autem molestias laboriosam saepe sit accusantium nihil qui illum aspernatur repellendus ipsam
-                enim tempora Lorem ipsum, dolor sit amet consectetur adipisicing elit. A tempore dolor sint aspernatur obcaecati possimus aut perferendis eum, provident repudiandae temporibus reprehenderit consequuntur nam facilis, alias nihil nobis doloremque modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, corrupti. aut atque, explicabo animi beatae voluptate eligendi quis ut! Magni! Lorem ipsum dolor sit
+                enim tempora Lorem ipsum, dolor sit amet consectetur adipisicing elit. A tempore dolor sint aspernatur
+                obcaecati possimus aut perferendis eum, provident repudiandae temporibus reprehenderit consequuntur nam
+                facilis, alias nihil nobis doloremque modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Harum, corrupti. aut atque, explicabo animi beatae voluptate eligendi quis ut! Magni! Lorem ipsum dolor
+                sit
                 amet consectetur adipisicing elit. Facilis aliquam distinctio quidem dolorem cupiditate ab iure eveniet
                 accusamus? Excepturi ut nulla voluptas mollitia dolor, amet dolorum accusamus sed aut atque explicabo
                 pariatur reprehenderit facere unde libero laboriosam soluta vitae provident accusantium quisquam quod
