--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,9 @@
                 tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis
                 soluta officia facere sint commodi quia numquam vero, officiis ut. Consequuntur nisi maxime dicta
                 corrupti nam. ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis inventore sequi rerum,
-                obcaecati Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore magnam tempore quaerat soluta accusantium sapiente, reprehenderit nemo ipsam, aliquam ducimus consequatur, pariatur beatae aut quod. maiores ex.</p>
+                obcaecati Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore magnam tempore quaerat soluta
+                accusantium sapiente, reprehenderit nemo ipsam, aliquam ducimus consequatur, pariatur beatae aut quod.
+                maiores ex.</p>
         </article>
         <aside class="out">
             <h4>lorem</h4>
@@ -88,22 +90,32 @@
         </section>
         <footer class="down">
             <p>To receive updates from the site,fill in the following details: </p>
-            <form>
-                <label>
-                    name:
-                    <input type="text" name="name">
-                </label>
-                <label>
-                    email:
-                    <input type="email" name="email">
-                </label>
-                <label>
-                    your message:
-                    <textarea name="message"></textarea>
-                </label>
-                <button type="submit">send massage</button>
-                <button type="reset">reset</button>
-            </form>
+            <div class="end">
+                <form>
+                    <div class="box-13">
+                        <label>
+                            name:
+                            <input type="text" name="name" placeholder="name">
+                        </label>
+                    </div>
+                    <div class="box-14">
+                        <label>
+                            email:
+                            <input type="email" name="email" placeholder="email@example.com">
+                        </label>
+                    </div>
+                    <div class="box-15">
+                        <label>
+                            your message:
+                            <textarea name="message" rows="1" cols="15" placeholder="message"></textarea>
+                        </label>
+                    </div>
+                    <div class="box-16">
+                        <button type="submit">send massage</button>
+                        <button type="reset">reset</button>
+                    </div>
+                </form>
+            </div>
         </footer>
     </div>
 </body>
