--- a/index2.html
+++ b/index2.html
@@ -90,8 +90,8 @@
         </section>
         <footer class="down">
             <p>To receive updates from the site,fill in the following details: </p>
-            <div class="end">
-                <form>
+            <div>
+                <form class="end">
                     <div class="box-13">
                         <label>
                             name:
