change in the url pages

--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
             <p class="box-8">Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempore, neque
                 quis a necessitatibus praesentium. Incidunt earum molestiae laudantium repellat cumque, quisquam neque
                 expedita impedit consequuntur consectetur tenetur eum sit velit recusandae nemo, inventore cupiditate
-                iure odit aperiam cum dignissimos Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum
+                iure odit aperiam wert dfdfd cum dignissimos Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum
                 architecto doloribus quaerat nulla, ad Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Architecto, hic, facilis similique necessitatibus reprehenderit ab placeat quidem maiores ea facere
                 fugiat iusto rem debitis, minima recusandae. Totam explicabo eaque reprehenderit. Lorem ipsum dolor sit
@@ -33,7 +33,7 @@
             <h4>lorem</h4>
             <p class="box-9">Lorem Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Dignissimos rem, quibusdam dicta nemo doloremque labore. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Iusto incidunt perspiciatis neque, tempore autem hic accusamus soluta illo, voluptatum
+                adipisicing elit. Iusto incivbvbv vbvbdunt perspiciatis neque, tempore autem hic accusamus soluta illo, voluptatum
                 molestias dolorem nemo dolore quisquam magnam nam minima enim quas in? sit amet, consectetur adipisicing
                 elit. Soluta minima aliquam suscipit aliquid reiciendis, assumenda magnam fuga, temporibus ullam magni
                 tempora nam quas doloremque nesciunt dolorum hic reprehenderit? Aut totam expedita porro cum facilis
