change in the url in the home page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
                 <ul>
                     <li class="top">Manga</li>
-                    <li class="under"><a href="http://127.0.0.1:5500/index2.html">All-manga</a></li>
+                    <li class="under"><a href="index2.html">All-manga</a></li>
                     <li class="under"><a href="#">Op-manga</a></li>
                     <li class="under"><a href="#">Bleach-manga</a></li>
                     <li class="under"><a href="#">Naruto-manga</a></li>
@@ -56,7 +56,7 @@
                 </ul>
                 <ul>
                     <li class="top">Gallery</li>
-                    <li class="under"><a href="http://127.0.0.1:5500/index1.html">All-Gallery</a></li>
+                    <li class="under"><a href="index1.html">All-Gallery</a></li>
                     <li class="under"><a href="#">Op-gallery</a></li>
                     <li class="under"><a href="#">Bleavh-gallery</a></li>
                     <li class="under"><a href="#">Naruto-gallery</a></li>
