change the url in rest fo the pages

--- a/index1.html
+++ b/index1.html
@@ -16,8 +16,8 @@
             <h2>A Video Gallery</h2>
         </header>
         <nav class="navi">
-            <a href="http://127.0.0.1:5500/index2.html">Next Page</a>
-            <a href="http://127.0.0.1:5500/index.html">Back To Home Page</a>
+            <a href="index2.html">Next Page</a>
+            <a href="index1.html">Back To Home Page</a>
         </nav>
         <article class="art">
             <h4>lorem</h4>
