fixed the url in the pages

--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
         </header>
         <nav class="navi">
             <a href="index2.html">Next Page</a>
-            <a href="index1.html">Back To Home Page</a>
+            <a href="index.html">Back To Home Page</a>
         </nav>
         <article class="art">
             <h4>lorem</h4>
