--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@
             <h2>Manga</h2>
         </header>
         <nav class="ion">
-            <a href="/index.html">Back To Home Page</a>
-            <a href="/index1.html">Previous Page</a>
+            <a href="index.html">Back To Home Page</a>
+            <a href="index1.html">Previous Page</a>
         </nav>
         <article class="le">
             <h4>lorem</h4>
